[package]
name = "rgpnp-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.23", features = ["debug-glam-assert"] }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
